tests/ui/consts/const-err-late.stderr
error[E0080]: index out of bounds: the length is 1 but the index is 1
  --> $DIR/const-err-late.rs:14:21
   |
LL |     const FOO: u8 = [5u8][1];
   |                     ^^^^^^^^ evaluation of `S::<i32>::FOO` failed here

note: erroneous constant encountered
  --> $DIR/const-err-late.rs:20:16
   |
LL |     black_box((S::<i32>::FOO, S::<u32>::FOO));
   |                ^^^^^^^^^^^^^

error[E0080]: index out of bounds: the length is 1 but the index is 1
  --> $DIR/const-err-late.rs:14:21
   |
LL |     const FOO: u8 = [5u8][1];
   |                     ^^^^^^^^ evaluation of `S::<u32>::FOO` failed here

note: erroneous constant encountered
  --> $DIR/const-err-late.rs:20:31
   |
LL |     black_box((S::<i32>::FOO, S::<u32>::FOO));
   |                               ^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/const-err-late.rs:20:16
   |
LL |     black_box((S::<i32>::FOO, S::<u32>::FOO));
   |                ^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

note: erroneous constant encountered
  --> $DIR/const-err-late.rs:20:31
   |
LL |     black_box((S::<i32>::FOO, S::<u32>::FOO));
   |                               ^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
